[FIX] website_product_filters: Fix unaligned thumbnails.
When no image on categories it was unaligned
then is important has a minimal height in case image 
does not fit with tha spaces.
cerge from PR #864
closes Vauxoo/yoytec#1058

--- a/website_product_filters/static/src/less/filters.less
+++ b/website_product_filters/static/src/less/filters.less
@@ -79,3 +79,8 @@ b.title {
     padding: 0 15px;
   }
 }
+.subcategories {
+    img {
+        min-height: 128px;
+    }
+}
